Added Reddit API

--- a/Creds.ini
+++ b/Creds.ini
@@ -4,3 +4,6 @@ ApiKeySecret = z3ZTBJ6Dm7tXzOgiTQyTwsFJq2pONJsO7oWemln1hVU94IbUDo
 BearerToken = AAAAAAAAAAAAAAAAAAAAACMtdQEAAAAAL0pjBKu56%2BaRhsDckvRBQ1mh3Uo%3Dtg9mBdluSo8ZdhJqtwvhT7zSq2bRQe5CHpDaJ8je1DYCVyTGut
 AccessToken = 1510950719792336898-4vCN019g3UFrP1HBImzwAAEywrWbgF
 AccessTokenSecret = uXCJsjflxO2sAebKd74QPzTKcDSgN8YgQLkbVvtQE2fUa
+[reddit]
+OwnScript = CStp8f6-SF0WmDSUIWZ8_A
+Secret = YAEaNvh8cmUiWfqcIOsk1kS5Cym5Cg
