--- a/Creds.ini
+++ b/Creds.ini
@@ -1,9 +1,9 @@
 [twitter]
-ApiKey = YQV0c1Fz9ALRy5qeSdsmiUfHc
-ApiKeySecret = z3ZTBJ6Dm7tXzOgiTQyTwsFJq2pONJsO7oWemln1hVU94IbUDo
-BearerToken = AAAAAAAAAAAAAAAAAAAAACMtdQEAAAAAL0pjBKu56%2BaRhsDckvRBQ1mh3Uo%3Dtg9mBdluSo8ZdhJqtwvhT7zSq2bRQe5CHpDaJ8je1DYCVyTGut
-AccessToken = 1510950719792336898-4vCN019g3UFrP1HBImzwAAEywrWbgF
-AccessTokenSecret = uXCJsjflxO2sAebKd74QPzTKcDSgN8YgQLkbVvtQE2fUa
+ApiKey = bA8RZ96tgd90fzRd56zsm2pps
+ApiKeySecret = pIZlcygMw7r7xk2Y3s1EFLyZ4Pc06HvthUURwAmCHVXKEYJzKq
+BearerToken = AAAAAAAAAAAAAAAAAAAAACcDogEAAAAAAJsaU%2FQmVG4upsjYv6qm9pGQfqE%3Dl3YvX3dwGGqN9sYSmheXYhVPt51ZDBz30BUDUCP12bjryYhGW5
+AccessToken = 1167781003391356929-6VchL75qNk9ZUqyBndbeT46iHwSLEA
+AccessTokenSecret = sOZDCy2eWWKTunNznjwjfwgDaOs0uxL77Sli1u2sLrEdE
 [reddit]
-OwnScript = CStp8f6-SF0WmDSUIWZ8_A
-Secret = YAEaNvh8cmUiWfqcIOsk1kS5Cym5Cg
+OwnScript = dLCh7ntBFROg2KgpuDWCDA
+Secret = xaAdRff9pD6hTQ2p1hs2MV-7_-17bg
